examples/neg/typer/expected_tuple_got_args.effekt
def foo(x: (Int, String)): Int = 42

def main() = {
  val _ = foo(42, "hello")
}